--- a/README.Rmd
+++ b/README.Rmd
@@ -21,20 +21,14 @@ with local projections by [Jordà (2005)](https://www.aeaweb.org/articles?id=10.
 
 ## Main features
 
-- Estimate linear and non-linear impulse responses with local projections.
+- Estimates linear and non-linear impulse responses with local projections.
 - Functions to plot linear and non-linear impulse responses.
 - Functions are partly implemented in *Rcpp* and *RcppArmadillo* to improve efficiency.
 - High performance with parallel computation.
 
 ## Installation
 
-You can install the released version of **lpirfs** from [CRAN](https://CRAN.R-project.org):
-
-```{r, eval = FALSE}
-install.packages("lpirfs")
-```
-
-or the development version from [GitHub](https://github.com/):
+You can install the the development version of **lpirfs** from [GitHub](https://github.com/):
 
 ``` r
 # install.packages("devtools")
